snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1-all.jar.md5
e1fd87436cf06079fc842da309bf743c